Fix: alignemts of headings and paragraphs passed to the BaseTable

--- a/src/blocks/Providers/providers.scss
+++ b/src/blocks/Providers/providers.scss
@@ -92,6 +92,10 @@
     }
 
     &__status {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
       border-radius: $spacing_1_2;
       margin-top: $spacing_0_4;
       margin-right: auto;
